elf: Add unified naming convention for template properties

--- a/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/AXS101_Empty_C_Project/template.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/AXS101_Empty_C_Project/template.properties
@@ -1,2 +1,2 @@
-Emptyaxs101.Ctemplate.label=Empty Project For AXS101
-Emptyaxs101.Ctemplate.description=A skeletal Managed C project for ARC AXS101 SDP. Creates a folder for sources and contains linker script and crt0 start file.
+template.label=Empty Project For AXS101
+template.description=A skeletal Managed C project for ARC AXS101 SDP. Creates a folder for sources, configures the toolchain and contains linker script.
