--- a/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/HelloWorld_C_Project/template.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/HelloWorld_C_Project/template.properties
@@ -1,5 +1,5 @@
-HelloWorld.Ctemplate.label=Hello World C Project
-HelloWorld.Ctemplate.description=A skeletal Managed C Hello World project. Creates a folder for sources and another for include.
+template.label=Hello World C Project
+template.description=A skeletal Managed C Hello World project. Creates a folder for sources.
 HelloWorld.basics.label=Basic Settings
 HelloWorld.basics.description=Basic properties of a project
 HelloWorld.author.label=Author
