--- a/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/emsk_em11d_empty_c/template.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/emsk_em11d_empty_c/template.properties
@@ -1,2 +1,2 @@
-Emptyem11.Ctemplate.label=Empty Project For EM SK EM11D
-Emptyem11.Ctemplate.description=A skeletal Managed C project for EM Starter Kit EM11D. Creates a folder for sources and contains linker script and start file.
+template.label=Empty Project For EM SK EM11D
+template.description=A skeletal Managed C project for EM Starter Kit EM11D. Creates a folder for sources and configures the toolchain.
