--- a/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/emsk_em7d_HelloWorld_c/template.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/emsk_em7d_HelloWorld_c/template.properties
@@ -1,5 +1,5 @@
 template.label=Hello World for ARC EM Starter Kit EM7D
-template.description=A skeletal C Hello World project for EM Starter Kit EM7D. Creates a folder for sources.
+template.description=A skeletal C Hello World project for EM Starter Kit EM7D. Creates a folder for sources and configures the toolchain.
 
 basics.label=Basic Settings
 basics.description=Basic properties of a project
