--- a/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/emsk_em7d_empty_c/template.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/emsk_em7d_empty_c/template.properties
@@ -1,2 +1,2 @@
-Emptyem7.Ctemplate.label=Empty Project For EM SK EM7D
-Emptyem7.Ctemplate.description=A skeletal Managed C project for EM Starter Kit EM7D. Creates a folder for sources and contains linker script and start file.
+template.label=Empty Project For EM SK EM7D
+template.description=A skeletal Managed C project for EM Starter Kit EM7D. Creates a folder for sources and configures the toolchain.
