--- a/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/emsk_em9d_empty_cpp/template.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/emsk_em9d_empty_cpp/template.properties
@@ -1,2 +1,2 @@
-Emptyem9.CCtemplate.label=Empty Project For EM SK EM9D
-Emptyem9.CCtemplate.description=A skeletal Managed C++ project for EM Starter Kit EM9D. Creates a folder for sources and contains linker script and start file.
+template.label=Empty Project For EM SK EM9D
+template.description=A skeletal Managed C++ project for EM Starter Kit EM9D. Creates a folder for sources and configures the toolchain.
