elf: Use same property names across all Hello world templates

--- a/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/HelloWorld_C_Project/template.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/HelloWorld_C_Project/template.properties
@@ -1,15 +1,20 @@
 template.label=Hello World C Project
 template.description=A skeletal Managed C Hello World project. Creates a folder for sources.
-HelloWorld.basics.label=Basic Settings
-HelloWorld.basics.description=Basic properties of a project
-HelloWorld.author.label=Author
-HelloWorld.author.description=Name of the author
-HelloWorld.copyright.label=Copyright notice
-HelloWorld.copyright.description=Your copyright notice
-HelloWorld.copyright.default=Your copyright notice
-HelloWorld.message.default=!!!Hello ARC World!!!
-HelloWorld.message.description=Your hello world greeting message
-HelloWorld.message.label=Hello world greeting
-HelloWorld.sourceDir.label=Source
-HelloWorld.sourceDir.description=Directory for hello world project source files
-HelloWorld.sourceDir.default=src
+
+basics.label=Basic Settings
+basics.description=Basic properties of a project
+
+author.label=Author
+author.description=Name of the author
+
+copyright.label=Copyright notice
+copyright.description=Your copyright notice
+copyright.default=(C) YYYY
+
+message.label=Hello world greeting
+message.description=Your hello world greeting message
+message.default=Hello world!
+
+sourceDir.label=Source
+sourceDir.description=Directory for hello world project source files
+sourceDir.default=src
