--- a/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/emsk_em9d_HelloWorld_c/template.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/emsk_em9d_HelloWorld_c/template.properties
@@ -9,13 +9,12 @@ author.description=Name of the author
 
 copyright.label=Copyright notice
 copyright.description=Your copyright notice
-copyright.default=Your copyright notice
+copyright.default=(C) YYYY
 
-message.default=!!!Hello ARC World!!!
-message.description=Your hello world greeting message
 message.label=Hello world greeting
+message.description=Your hello world greeting message
+message.default=Hello world!
 
 sourceDir.label=Source
 sourceDir.description=Directory for hello world project source files
 sourceDir.default=src
-
