--- a/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/AXS103_Empty_CPP_Project/template.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/AXS103_Empty_CPP_Project/template.properties
@@ -1,2 +1,2 @@
-template.label=Empty Project For AXS103
+template.label=ARC AXS103 Empty Project
 template.description=A skeletal Managed C++ project for ARC AXS103 SDP. Creates a folder for sources, configures the toolchain and contains linker script .
