--- a/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/emsk_em11d_empty_c/template.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/emsk_em11d_empty_c/template.properties
@@ -1,2 +1,2 @@
-template.label=Empty Project For EM SK EM11D
-template.description=A skeletal Managed C project for EM Starter Kit EM11D. Creates a folder for sources and configures the toolchain.
+template.label=ARC EM Starter Kit EM11D Empty Project
+template.description=A skeletal Managed C project for ARC EM Starter Kit EM11D. Creates a folder for sources and configures the toolchain.
