--- a/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/hsdk_empty_cpp/template.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/hsdk_empty_cpp/template.properties
@@ -1,2 +1,2 @@
-template.label=Empty Project For ARC HS Development Kit
+template.label=ARC HS Development Kit Empty Project
 template.description=A skeletal Managed C++ project for ARC HS Development Kit. Contains a TCF file.
