--- a/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/iotdk_empty_cpp/template.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/iotdk_empty_cpp/template.properties
@@ -1,2 +1,2 @@
-template.label=Empty Project For IoT DevKit
+template.label=IoT DevKit Empty Project
 template.description=A skeletal Managed C++ project for ARC IoT DevKit. Contains a TCF file.
