--- a/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/emsk_em7d_empty_c/template.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/emsk_em7d_empty_c/template.properties
@@ -1,2 +1,2 @@
-template.label=Empty Project For EM SK EM7D
+template.label=ARC EM Starter Kit EM7D Empty Project
 template.description=A skeletal Managed C project for EM Starter Kit EM7D. Creates a folder for sources and configures the toolchain.
