--- a/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/emsk_em9d_HelloWorld_c/template.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/emsk_em9d_HelloWorld_c/template.properties
@@ -1,4 +1,4 @@
-template.label=Hello World for ARC EM Starter Kit EM9D
+template.label=ARC EM Starter Kit EM9D Hello World
 template.description=A skeletal C Hello World project for EM Starter Kit EM9D. Creates a folder for sources and configures the toolchain.
 
 basics.label=Basic Settings
