--- a/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/emsk_em9d_empty_cpp/template.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/emsk_em9d_empty_cpp/template.properties
@@ -1,2 +1,2 @@
-template.label=Empty Project For EM SK EM9D
+template.label=ARC EM Starter Kit EM9D Empty Project
 template.description=A skeletal Managed C++ project for EM Starter Kit EM9D. Creates a folder for sources and configures the toolchain.
