--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -7319,13 +7319,13 @@
        <template
             filterPattern=".*g\+\+"
             id="org.eclipse.cdt.cross.arc.gnu.templates.HelloWorld_CPP_Project"
-            location="$nl$/templates/projecttemplates/HelloWorld_CPP_Project/template.xml"
+            location="templates/projecttemplates/HelloWorld_CPP_Project/template.xml"
             projectType="org.eclipse.cdt.cross.arc.gnu.buildArtefactType.application">
       </template>
       <template
             filterPattern=".*gcc"
             id="org.eclipse.cdt.cross.arc.gnu.templates.HelloWorld_C_Project"
-            location="$nl$/templates/projecttemplates/HelloWorld_C_Project/template.xml"
+            location="templates/projecttemplates/HelloWorld_C_Project/template.xml"
             projectType="org.eclipse.cdt.cross.arc.gnu.buildArtefactType.application">
       </template>
 
