--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -67,6 +67,11 @@
             name="ARC HS Development Kit Projects"
             property="org.eclipse.cdt.build.core.buildArtefactType">
       </propertyValue>
+      <propertyValue
+            id="c.s.a.gnu.elf.buildArtefactType.application.emsdp"
+            name="ARC EM SDP Projects"
+            property="org.eclipse.cdt.build.core.buildArtefactType">
+      </propertyValue>
    </extension>
    
    <!-- eb discovery extensions -->
@@ -7228,6 +7233,39 @@
          </configuration>
       </projectType>
       <projectType
+            buildArtefactType="c.s.a.gnu.elf.buildArtefactType.application.emsdp"
+            id="c.s.a.gnu.elf.project.emsdp"
+            isAbstract="false">
+         <configuration
+               artifactExtension="elf"
+               buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug"
+               id="c.s.a.gnu.elf.project.emsdp.debug"
+               name="Debug"
+               parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base">
+            <toolChain
+                  id="c.s.a.gnu.elf.project.emsdp.debug.toolchain"
+                  isAbstract="false"
+                  secondaryOutputs="org.eclipse.cdt.cross.arc.gnu.createflash.output;org.eclipse.cdt.cross.arc.gnu.createlisting.output;org.eclipse.cdt.cross.arc.gnu.printsize.output"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base"
+                  targetTool="org.eclipse.cdt.cross.arc.gnu.em.linux.c.linker.base;org.eclipse.cdt.cross.arc.gnu.em.linux.cpp.linker.base">
+            </toolChain>
+         </configuration>
+         <configuration
+               artifactExtension="elf"
+               buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release"
+               id="c.s.a.gnu.elf.project.emsdp.release"
+               name="Release"
+               parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base">
+            <toolChain
+                  id="c.s.a.gnu.elf.project.emsdp.release.toolchain"
+                  isAbstract="false"
+                  secondaryOutputs="org.eclipse.cdt.cross.arc.gnu.createflash.output;org.eclipse.cdt.cross.arc.gnu.createlisting.output;org.eclipse.cdt.cross.arc.gnu.printsize.output"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base"
+                  targetTool="org.eclipse.cdt.cross.arc.gnu.em.linux.c.linker.base;org.eclipse.cdt.cross.arc.gnu.em.linux.cpp.linker.base">
+            </toolChain>
+         </configuration>
+      </projectType>
+      <projectType
             buildArtefactType="c.s.a.gnu.elf.buildArtefactType.application.hsdk"
             id="c.s.a.gnu.elf.project.hsdk"
             isAbstract="false">
@@ -7456,6 +7494,24 @@
             id="c.s.a.gnu.elf.templates.iotdk_empty_cpp"
             location="templates/projecttemplates/iotdk_empty_cpp/template.xml"
             projectType="c.s.a.gnu.elf.buildArtefactType.application.iotdk">
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
+         </toolChain>
+      </template>
+      <template
+            filterPattern=".*gcc"
+            id="c.s.a.gnu.elf.templates.emsdp_empty_c"
+            location="templates/projecttemplates/emsdp_empty_c/template.xml"
+            projectType="c.s.a.gnu.elf.buildArtefactType.application.emsdp">
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
+         </toolChain>
+      </template>
+      <template
+            filterPattern=".*g\+\+"
+            id="c.s.a.gnu.elf.templates.emsdp_empty_cpp"
+            location="templates/projecttemplates/emsdp_empty_cpp/template.xml"
+            projectType="c.s.a.gnu.elf.buildArtefactType.application.emsdp">
          <toolChain
                id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
          </toolChain>
