elf: Simplify HSDK project type
Remove all extra information that is now in the super class.

--- a/org.eclipse.cdt.cross.arc.gnu/build.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/build.properties
@@ -3,5 +3,6 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                arc32x32b.gif,\
+               gnu.elf.properties,\
                plugin.xml,\
                templates/
