--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -7113,34 +7113,25 @@
       </projectType>
       <projectType
             buildArtefactType="c.s.a.gnu.elf.buildArtefactType.application.emsdp"
-            id="c.s.a.gnu.elf.project.emsdp"
-            isAbstract="false">
+            id="com.synopsys.arc.gnu.elf.project.emsdp">
          <configuration
-               artifactExtension="elf"
                buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug"
-               id="c.s.a.gnu.elf.project.emsdp.debug"
-               name="Debug"
+               id="com.synopsys.arc.gnu.elf.project.emsdp.debug"
+               name="%debug"
                parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base">
             <toolChain
-                  id="c.s.a.gnu.elf.project.emsdp.debug.toolchain"
-                  isAbstract="false"
-                  secondaryOutputs="org.eclipse.cdt.cross.arc.gnu.createflash.output;org.eclipse.cdt.cross.arc.gnu.createlisting.output;org.eclipse.cdt.cross.arc.gnu.printsize.output"
-                  superClass="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base"
-                  targetTool="org.eclipse.cdt.cross.arc.gnu.em.linux.c.linker.base;org.eclipse.cdt.cross.arc.gnu.em.linux.cpp.linker.base">
+                  id="com.synopsys.arc.gnu.elf.project.emsdp.debug.toolchain"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
             </toolChain>
          </configuration>
          <configuration
-               artifactExtension="elf"
                buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release"
-               id="c.s.a.gnu.elf.project.emsdp.release"
-               name="Release"
+               id="com.synopsys.arc.gnu.elf.project.emsdp.release"
+               name="%release"
                parent="org.eclipse.cdt.cross.arc.gnu.linux.configuration.base">
             <toolChain
-                  id="c.s.a.gnu.elf.project.emsdp.release.toolchain"
-                  isAbstract="false"
-                  secondaryOutputs="org.eclipse.cdt.cross.arc.gnu.createflash.output;org.eclipse.cdt.cross.arc.gnu.createlisting.output;org.eclipse.cdt.cross.arc.gnu.printsize.output"
-                  superClass="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base"
-                  targetTool="org.eclipse.cdt.cross.arc.gnu.em.linux.c.linker.base;org.eclipse.cdt.cross.arc.gnu.em.linux.cpp.linker.base">
+                  id="com.synopsys.arc.gnu.elf.project.emsdp.release.toolchain"
+                  superClass="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
             </toolChain>
          </configuration>
       </projectType>
